--- a/deck.mdx
+++ b/deck.mdx
@@ -16,7 +16,7 @@ export const theme = themes.future;
 
 - Le développement web, et à quoi ça sert
 - A-t-on besoin de développement web?
-- Que peux tu réaliser autant qu'un développement web?
+- Que peux tu réaliser autant qu'un développeur web?
 - Le bon côté des jeux videos
 - Comment peut-on utiliser les jeux videos pour notre bénéfice
 - Mon futur projet en combinant ces deux passions
